bk_ida/gobmkida/c1/owl_escape_value
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_escape_value/src/engine/owl.c:5339:27: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v3 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v2); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_escape_value/src/obj/1/owl.o] Error 1
